LPS-64579 fix alignment of links

--- a/modules/apps/web-experience/asset/asset-publisher-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/web-experience/asset/asset-publisher-web/src/main/resources/META-INF/resources/css/main.scss
@@ -1,4 +1,8 @@
 .portlet-asset-publisher {
+	.asset-abstract {
+		overflow: auto;
+	}
+
 	.asset-full-content {
 	    img {
 	        max-width: 100%;
